<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_active_smstype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_auto_answer"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:padding="30dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_active_smstype">

        <TextView
            android:id="@+id/title_sms_bomber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/new_bomber"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/title_pnv_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_victim" />

        <EditText
            android:id="@+id/editText_pnv_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView_body_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body" />

        <EditText
            android:id="@+id/editText_body_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView_qt_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/editText_qt_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/button_start_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bomb" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>