<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_smstype_title"
        android:textColor="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_smstype"
        android:textAlignment="center"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/dialog_smstype_title_sms"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/dialog_smstype_title_sms_et"
        android:textColor="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/dialog_smstype_body_sms"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textAlignment="center"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/dialog_smstype_body_sms_et"
        android:textColor="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/dialog_smstype_wr_sms"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wr"
        android:textAlignment="center"
        android:textFontWeight="500"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/dialog_smstype_wr_sms_et"
        android:textColor="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="text" />

    <Switch
        android:id="@+id/dialog_smstype_active_sms_switch"
        android:textSize="24dp"
        android:textColor="@color/text_color"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/active" />

</LinearLayout>